<resources>
    <string name="app_name">Thrive Safely</string>
    <string name="main_title">Thrive Safely</string>
    <string name="watering_can_image">watering_can_image</string>
    <string name="plants_button_text">plants</string>
    <string name="calendar_button_text">calendar</string>
    <string name="textview">TextView</string>
    <string name="add_new_plant_button">add new plant</string>
    <string name="watering_intro_text">How often you want \nto water this plant:</string>
    <string name="fertilizing_info_text">How often you want \nto fertilize this plant:</string>
    <string name="how_often_text">Every %1d days</string>
    <string name="acceptable_temperature_text">What temperature \ndoes it like:</string>
    <string name="higher_than_temp_text">Higher than %1d *C</string>
    <string name="add_plant_form_name">Name</string>
    <string name="add_plant_form_species">Species</string>
    <string name="add_plant_form_watering">Watering every X days</string>
    <string name="add_plant_form_fertilizing">Fertilizing every X days</string>
    <string name="add_plant_form_min_temp">Minimum temperature</string>
    <string name="add_plant_form_submit_button">Submit</string>
    <string name="add_a_new_plant_title_text">Add a new plant</string>
    <string name="edit_plant_button">Edit plant</string>
    <string name="delete_plant_button">Delete plant</string>
    <string name="edit_plant_title">Edit existing plant</string>
    <string name="save_changes_form_button">Save changes</string>
    <string name="deletion_warning_title">Careful!</string>
    <string name="deletion_warning_message">You are going to delete every \ninfo about that plant. Proceed?</string>
    <string name="cancel_deletion">Cancel</string>
    <string name="confirm_deletion">Delete plant</string>
    <string name="search_for_plant">Search for plant...</string>
    <string name="last_watering_text">Last watering:</string>
    <string name="water_today">today</string>
    <string name="water_tomorrow">tomorrow</string>
    <string name="water_in_X_days">in %1d days</string>
    <string name="water_us_later">Water us later</string>
    <string name="water_X_days_ago">%1d days ago</string>
    <string name="water_us_today">Water us today</string>
    <string name="forgot_to_water">You forgot to water us!</string>
    <string name="water_yesterday">yesterday</string>
    <string name="confirm_watering_dialog">Have you watered %1s?</string>
    <string name="yes">Yes!</string>
    <string name="no">Not yet</string>
    <string name="last_time_you_watered_this_plant">Last time you watered it</string>
    <string name="main_notification_channel_name">main_channel</string>
    <string name="notification_title">Don\'t forget to water us!</string>
    <string name="notification_body">You have plants to water today</string>
</resources>
