<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:fontFamily="cursive"
        android:gravity="center"
        android:textColor="@color/main_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/deletion_warning_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:scaleType="center"
        android:contentDescription="@string/app_name" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/deletion_warning_message" />
</LinearLayout>