<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPlantActivity"
    android:background="@color/main_background">

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="69dp"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="@string/add_plant_form_name"
        android:inputType="textCapWords"
        android:textColor="@color/main_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_new_plant_title" />

    <EditText
        android:id="@+id/species_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="69dp"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="@string/add_plant_form_species"
        android:inputType="text|textPersonName"
        android:textColor="@color/main_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edit_text" />

    <EditText
        android:id="@+id/watering_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="69dp"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="@string/add_plant_form_watering"
        android:inputType="number"
        android:textColor="@color/main_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/species_edit_text" />

    <EditText
        android:id="@+id/fertilizing_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="69dp"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="@string/add_plant_form_fertilizing"
        android:inputType="number"
        android:textColor="@color/main_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/watering_edit_text" />

    <EditText
        android:id="@+id/min_temp_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="69dp"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="@string/add_plant_form_min_temp"
        android:inputType="number"
        android:textColor="@color/main_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fertilizing_edit_text" />

    <EditText
        android:id="@+id/last_watering_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="69dp"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="@string/last_time_you_watered_this_plant"
        android:inputType="number"
        android:textColor="@color/main_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/min_temp_edit_text" />

    <Button
        android:id="@+id/sumbit_form_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="148dp"
        android:background="@color/main_title"
        android:fontFamily="cursive"
        android:onClick="submitInsertedPlant"
        android:text="@string/add_plant_form_submit_button"
        android:textAllCaps="false"
        android:textColor="@color/main_background"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_watering_edit_text" />

    <TextView
        android:id="@+id/add_new_plant_title"
        android:layout_width="264dp"
        android:layout_height="52dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/add_a_new_plant_title_text"
        android:textColor="@color/main_title"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CalendarView
        android:id="@+id/add_plant_calendar"
        android:layout_width="321dp"
        android:layout_height="307dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="31dp"
        android:background="@color/main_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/CalenderViewCustom"
        android:firstDayOfWeek="2"
        android:dateTextAppearance="@style/CalenderViewDateCustomText"
        android:weekDayTextAppearance="@style/CalenderViewWeekCustomText" />

</android.support.constraint.ConstraintLayout>