<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:background="@color/main_background">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/plant_name_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:fontFamily="cursive"
            android:gravity="center"
            android:textColor="@color/main_title"
            android:textSize="@android:dimen/app_icon_size"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <TextView
            android:id="@+id/plant_species_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:fontFamily="cursive"
            android:gravity="center"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">


        <TextView
            android:id="@+id/watering_intro"
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/watering_intro_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/watering_frequency_text"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="cursive"
            android:text="@string/how_often_text"
            android:textColor="@color/main_title"
            android:textSize="18sp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">


        <TextView
            android:id="@+id/fertilizing_intro"
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="cursive"
            android:text="@string/fertilizing_info_text"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/fertilizing_frequency_text"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="cursive"
            android:text="@string/how_often_text"
            android:textColor="@color/main_title"
            android:textSize="18sp"
            android:textStyle="bold" />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">


        <TextView
            android:id="@+id/min_temp_intro"
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/acceptable_temperature_text"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/acceptable_temperature_text"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:fontFamily="cursive"
            android:text="@string/higher_than_temp_text"
            android:textColor="@color/main_title"
            android:textSize="18sp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:id="@+id/last_watering"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:fontFamily="cursive"
            android:text="@string/last_watering_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/last_watering_text"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="cursive"
            android:textColor="@color/main_title"
            android:textSize="18sp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp">

        <Button
            android:onClick="editPlant"
            android:id="@+id/edit_plant_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/main_title"
            android:fontFamily="cursive"
            android:text="@string/edit_plant_button"
            android:textAllCaps="false"
            android:textColor="@color/main_background"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginEnd="27dp"/>

        <Button
            android:onClick="deletePlantButton"
            android:id="@+id/delete_plant_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:background="@color/main_title"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="cursive"
            android:text="@string/delete_plant_button"
            android:textAllCaps="false"
            android:textColor="@color/main_background"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="15dp"/>


    </TableRow>
</TableLayout>