<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/main_background">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/main_title"
        android:textColor="@color/main_title"
        android:textSize="@android:dimen/app_icon_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" />

    <ImageView
        android:id="@+id/watering_can"
        android:layout_width="309dp"
        android:layout_height="316dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/watering_can_image"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/watering_can" />

    <Button
        android:onClick="openPlants"
        android:id="@+id/plants_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="157dp"
        android:layout_height="74dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="75dp"
        android:fontFamily="cursive"
        android:text="@string/plants_button_text"
        android:textAllCaps="false"
        android:textColor="@color/main_title"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/calendar_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="158dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="75dp"
        android:fontFamily="cursive"
        android:text="@string/calendar_button_text"
        android:textAllCaps="false"
        android:textColor="@color/main_title"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toEndOf="@+id/plants_button"
        app:layout_constraintTop_toBottomOf="@+id/main_title"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>