<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarActivity"
    android:background="@color/main_background"
    android:orientation="vertical"
    android:weightSum="15">

    <TextView
        android:id="@+id/textview_forgotten"
        android:layout_marginTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:fontFamily="cursive"
        android:background="@color/main_title"
        android:textColor="@color/main_background"
        android:textSize="26sp"
        android:textStyle="bold"
        android:text="@string/forgot_to_water"/>

    <ListView
        android:id="@+id/listview_forgotten"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scrollbars="vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:fontFamily="cursive"
        android:background="@color/main_title"
        android:textColor="@color/main_background"
        android:textSize="26sp"
        android:textStyle="bold"
        android:text="@string/water_us_today"/>

    <ListView
        android:id="@+id/listview_today"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scrollbars="vertical" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:fontFamily="cursive"
        android:background="@color/main_title"
        android:textColor="@color/main_background"
        android:textSize="26sp"
        android:textStyle="bold"
        android:text="@string/water_us_later"/>

    <ListView
        android:id="@+id/listview_later"
        android:listSelector="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scrollbars="vertical"
        android:layout_marginBottom="5dp"/>

</LinearLayout>
